--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -9,16 +9,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        # we want to test our package on several versions of Python
-        python-version: [3.10.*]
+#     strategy:
+#       matrix:
+#         # we want to test our package on several versions of Python
+#         python-version: [3.10.*]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+#           python-version: ${{ matrix.python-version }}
+            python-version: 3.10.x
         # make depends on poetry
       - name: Install dependencies
         run: |
