--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
 #           python-version: ${{ matrix.python-version }}
-            python-version: 3.10.x
+            python-version: "3.10.10 -3.10.12"
         # make depends on poetry
       - name: Install dependencies
         run: |
