--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.0"
 flake8 = "^6.1.0"
 pytest = "^7.4.0"
 psycopg2-binary = "^2.9.7"
+validators = "^0.21.2"
 
 [build-system]
 requires = ["poetry-core"]
