--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ flake8 = "^6.1.0"
 pytest = "^7.4.0"
 psycopg2-binary = "^2.9.7"
 validators = "^0.21.2"
+requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core"]
