--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^7.4.0"
 psycopg2-binary = "^2.9.7"
 validators = "^0.21.2"
 requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
 
 [build-system]
 requires = ["poetry-core"]
