--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ psycopg2-binary = "^2.9.7"
 validators = "^0.21.2"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.2"
+
+[tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
 
 [build-system]
